ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: zcp-system
  annotations:
    # ingress.bluemix.net/redirect-to-https: "True"
spec:
  rules:
  - host: monitoring.test.skcloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
  - host: prometheus.test.skcloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 9090
  - host: alertmanager.test.skcloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-service
          servicePort: 9093
  # tls:
  # - secretName: cloudzcp-io-cert
  #   hosts:
  #   - monitoring.test.skcloud.io
  #   - prometheus.test.skcloud.io
  #   - alertmanager.test.skcloud.io
